# plugin-analyser

./: CMakeLists.txt  example_config.json
build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PluginAnalyser.vcxproj  PluginAnalyser.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  plugin-analyser.sln  plugin_measure_grid_cli.vcxproj  plugin_measure_grid_cli.vcxproj.filters
src/: Config.cpp  Config.h  EnvelopeFollowerAnalyzer.cpp  EnvelopeFollowerAnalyzer.h  LinearResponseAnalyzer.cpp  MainComponent.cpp  MeasurementEngine.cpp  MeasurementEngine.h  PhaseAnalyzer.cpp  PhaseAnalyzer.h  PluginLoader.cpp  PluginLoader.h  SignalGenerator.cpp  SignalGenerator.h  TransientAnalyzer.cpp  TransientAnalyzer.h  main_cli.cpp
